Change auto-upgrade config to once every seven days; once a day was a bit busy

--- a/playbooks/unattended_upgrades/vars.yml
+++ b/playbooks/unattended_upgrades/vars.yml
@@ -2,3 +2,4 @@
 unattended_upgrades_mail: "{{ admin_email }}"
 unattended_upgrades_mail_report: "on-change" # Your other choice is "only-on-error"
 unattended_upgrades_automatic_reboot: "true"
+unattended_upgrades_frequency_days: 7
