--- a/playbooks/unattended_upgrades/vars.yml
+++ b/playbooks/unattended_upgrades/vars.yml
@@ -3,3 +3,4 @@ unattended_upgrades_mail: "{{ admin_email }}"
 unattended_upgrades_mail_report: "on-change" # Your other choice is "only-on-error"
 unattended_upgrades_automatic_reboot: "true"
 unattended_upgrades_frequency_days: 7
+unattended_upgrades_security_only: false # Do all standard updates, not just security
