It helps if you actually set cron up rather than just sort out its email address

--- a/playbooks/install_ec2_snapshot_script/main.yml
+++ b/playbooks/install_ec2_snapshot_script/main.yml
@@ -38,6 +38,15 @@
         group: root
         mode: "0744"
 
+    - name: Add job for volume snapshots
+      ansible.builtin.cron:
+        name: s3 backups
+        minute: "0"
+        hour: "5"
+        user: root
+        job: "/usr/local/bin/snapshot_ebs_volumes.sh > /dev/null"
+        cron_file: daily_snapshot
+
     - name: Send cron snapshot emails to the right place
       community.general.cronvar:
         name: MAILTO
