Get rid of old non-incremental backup scripts

--- a/playbook.yml
+++ b/playbook.yml
@@ -35,14 +35,9 @@
 - name: Install EC2 snapshot script
   import_playbook: playbooks/install_ec2_snapshot_script/main.yml
 
-- name: Install S3 backup script
-  import_playbook: playbooks/install_s3_backup_script/main.yml
-
+# Incremental backup to replace earlier S3 backup scripts
 - name: Set up duplicity/backupninja backups
   import_playbook: playbooks/web_backups/main.yml
-
-- name: Install S3 restore script
-  import_playbook: playbooks/install_s3_restore_script/main.yml
 
 - name: Install and configure basic Apache
   import_playbook: playbooks/web_apache/main.yml
