--- a/roles/Oefenweb.yarn/tasks/repository.yml
+++ b/roles/Oefenweb.yarn/tasks/repository.yml
@@ -15,7 +15,7 @@
     state: directory
     owner: root
     group: root
-    mode: 0755
+    mode: '0755'
   tags:
     - yarn-repository-keyrings-directory-create
 
@@ -32,7 +32,7 @@
     repo: "{{ item.type }} {{ item.url }} {{ item.component }}"
     state: "{{ item.state | default('present') }}"
     update_cache: true
-    mode: 0644
+    mode: '0644'
   with_items: "{{ yarn_repositories }}"
   tags:
     - yarn-repository-add
